# Final_year_project-

./: main.py  pyproject.toml  requirements.txt
agents/: behavior_question_agent.py  conversation_agent.py  facial_metrics_agent.py  metric_fusion_agent.py  mood_detection_agent.py  research_agent.py  speech_metrics_agent.py  support_agent.py
graph/: workflow.py
prompts/: prompts.py
state/: state.py
utils/: audio_capture.py  stt.py  tts.py  video_capture.py
