[project]
name = "finalyearproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search==4.4.2",
    "elevenlabs>=2.39.0",
    "fer==22.5.1",
    "httpx==0.27.0",
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-openai==0.1.22",
    "langgraph==0.2.16",
    "librosa==0.10.2.post1",
    "moviepy==1.0.3",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "pyaudio>=0.2.14",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "pyttsx3>=2.99",
    "scipy==1.13.1",
    "setuptools==69.5.1",
    "sounddevice==0.4.7",
    "speechrecognition>=3.15.1",
]
